<?xml version="1.0" encoding="UTF-8"?>
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xmlns="http://maven.apache.org/POM/4.0.0"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <artifactId>design-patterns</artifactId>

  <build>
    <plugins>
      <plugin>
        <artifactId>maven-surefire-plugin</artifactId>
        <configuration>
          <argLine>--enable-preview</argLine>
        </configuration>
        <groupId>org.apache.maven.plugins</groupId>
        <version>3.0.0-M4</version>
      </plugin>
    </plugins>
  </build>
  <dependencies>
    <dependency>
      <artifactId>junit-jupiter-engine</artifactId>
      <groupId>org.junit.jupiter</groupId>
      <scope>test</scope>
      <version>5.9.1</version>
    </dependency>

    <dependency>
      <artifactId>slf4j-api</artifactId>
      <groupId>org.slf4j</groupId>
      <version>2.0.6</version>
    </dependency>

    <dependency>
      <groupId>ch.qos.logback</groupId>
      <artifactId>logback-classic</artifactId>
      <version>1.3.3</version>
    </dependency>
    <dependency>
      <groupId>ch.qos.logback</groupId>
      <artifactId>logback-core</artifactId>
      <version>1.3.3</version>
    </dependency>

    <!-- TODO Ver como hacer para usar LOG4j en lugar de logback -->
    <!--    <dependency>-->
    <!--      <groupId>log4j</groupId>-->
    <!--      <artifactId>log4j</artifactId>-->
    <!--      <version>1.2.17</version>-->
    <!--    </dependency>-->

    <dependency>
      <artifactId>lombok</artifactId>
      <groupId>org.projectlombok</groupId>
      <scope>compile</scope>
      <version>1.18.24</version>
    </dependency>
  </dependencies>
  <groupId>org.example</groupId>
  <modelVersion>4.0.0</modelVersion>
  <modules>
    <module>src/abstract-factory</module>
    <module>src/commons</module>
    <module>src/active-object</module>
    <module>src/acyclic-visitor</module>
    <module>src/bridge</module>
    <module>src/builder</module>
    <module>src/business-delegate</module>
    <module>src/callback</module>
    <module>src/chain-of-responsibility</module>
    <module>src/command</module>
    <module>src/composite</module>
    <module>src/decorators</module>
    <module>src/facade</module>
    <module>src/factory</module>
    <module>src/fly-weight</module>
    <module>src/iterator</module>
    <module>src/adapter</module>
    <module>src/memento</module>
    <module>src/observer</module>
    <module>src/prototype</module>
    <module>src/proxy</module>
    <module>src/singleton</module>
    <module>src/state</module>
    <module>src/strategy</module>
    <module>src/template-method</module>
    <module>src/visitor</module>
    <module>src/combinator</module>
    <module>src/composite-entity</module>
    <module>src/converter</module>
    <module>src/currying</module>
    <module>src/data-bus</module>
    <module>src/data-locality</module>
    <module>src/data-mapper</module>
    <module>src/delegation</module>
    <module>src/dependency-injection</module>
    <module>src/dirty-flag</module>
    <module>src/double-buffer</module>
    <module>src/double-checked-locking</module>
    <module>src/double-dispatch</module>
    <module>src/event-aggregator</module>
    <module>src/event-asynchronous</module>
    <module>src/event-driven-architecture</module>
    <module>src/event-queue</module>
    <module>src/event-sourcing</module>
    <module>src/execute-around</module>
    <module>src/extension-objects</module>
    <module>src/factory-kit</module>
    <module>src/factory-method</module>
    <module>src/fan-out-fan-in</module>
    <module>src/feature-toggle</module>
    <module>src/filterer</module>
    <module>src/fluent-interface</module>
    <module>src/flux</module>
    <module>src/front-controller</module>
    <module>src/game-loop</module>
    <module>src/guarded-suspension</module>
    <module>src/half-sync-half-async</module>
    <module>src/identity-map</module>
    <module>src/intercepting-filter</module>
    <module>src/interpreter</module>
    <module>src/lazy-loading</module>
    <module>src/leader-followers</module>
    <module>src/lockable-object</module>
    <module>src/marker</module>
  </modules>
  <packaging>pom</packaging>

  <properties>
    <maven.compiler.source>17</maven.compiler.source>
    <maven.compiler.target>17</maven.compiler.target>
  </properties>

  <version>1.0-SNAPSHOT</version>

</project>